Proper jvm arguments for tests and runIdea tasks